--- a/step3.html
+++ b/step3.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Device Recovery</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+
     <style>
         /* Custom styles for the page */
         .ppro-bg {
@@ -22,34 +24,35 @@
         .ppro-text-green {
             color: #28a745; /* green */
         }
+        .status-image {
+            width: 100px;
+            height: 100px;
+            margin: 0 auto;
+        }
     </style>
     <script>
         function startSequence() {
             setTimeout(function() {
                 document.getElementById('subtext').innerText = 'Device Turned Off';
+                document.getElementById('status-image').src = 'off.png';
+                document.querySelector('progress').style.display = 'none';
+                document.getElementById('additional-text').style.display = 'none';
                 setTimeout(function() {
-                    document.getElementById('status').innerText = 'Now Switching the Device into Recovery Mode';
-                    document.getElementById('status').classList.remove('ppro-text');
-                    document.getElementById('status').classList.add('ppro-text-blue');
-                    document.getElementById('subtext').innerText = '';
-                    setTimeout(function() {
-                        document.getElementById('status').innerText = 'Device Set to Recovery Mode Succeed!';
-                        document.getElementById('status').classList.remove('ppro-text-blue');
-                        document.getElementById('status').classList.add('ppro-text-green');
-                        setTimeout(function() {
-                            window.location.href = 'step4.html'; // Replace with your target URL
-                        }, 2000);
-                    }, 10000);
-                }, 2000);
+                    window.location.href = 'dwn.html'; // Replace with your target URL
+                }, 1000);
             }, 30000);
         }
     </script>
 </head>
 <body onload="startSequence()" class="h-screen flex flex-col justify-center items-center ppro-bg">
     <div class="text-center">
-        <h1 id="status" class="text-4xl ppro-text">Please Turn off Your Device!!</h1>
+        <h2 class="text-2xl ppro-subtext mb-2">Current State:</h2>
+        <img id="status-image" src="on.png" alt="Status Image" class="status-image">
+        <h1 id="status" class="text-4xl ppro-text mt-4">Please Turn off Your Device</h1>
         <p id="subtext" class="text-lg ppro-subtext mt-2">Checking Device State...</p>
+        <p id="additional-text" class="text-sm ppro-subtext mt-1">It may take a while to sync device status, so please don't panic.</p>
+        <progress class="progress w-56"></progress>
     </div>
 </body>
+<script src="https://cdn.tailwindcss.com"></script>
 </html>
-
