--- a/step4.html
+++ b/step4.html
@@ -17,30 +17,64 @@
             background-color: #007bff;
             width: 0;
             transition: width 1s linear;
+            border-radius: 5px;
         }
         .progress-container {
             width: 100%;
             background-color: #e0e0e0;
             border-radius: 5px;
             overflow: hidden;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .status-text {
+            font-size: 1.25rem;
+            font-weight: 600;
+            color: #6c757d;
+        }
+        .warning-text {
+            font-size: 1rem;
+            color: #dc3545;
+            font-weight: 600;
+            margin-top: 10px;
+        }
+        .download-image {
+            width: 100px;
+            height: 100px;
+            margin: 0 auto;
         }
     </style>
     <script>
+        function getRandomSpeed() {
+            return (Math.random() * (5 - 1) + 1).toFixed(1); // Random speed between 1.0 and 5.0 MB/s
+        }
+
         function startDownload() {
+            const progressBar = document.getElementById('progress-bar');
+            const downloadSpeed = document.getElementById('download-speed');
+
             // Complete the first download (Utilities)
-            document.getElementById('progress-bar').style.width = '100%';
+            progressBar.style.width = '100%';
+            downloadSpeed.innerText = `Download speed: ${getRandomSpeed()} MB/s`;
+            
             setTimeout(function() {
                 // Reset the progress bar
-                document.getElementById('progress-bar').style.transition = 'none';
-                document.getElementById('progress-bar').style.width = '0';
+                progressBar.style.transition = 'none';
+                progressBar.style.width = '0';
                 // Start the second download (Resources)
                 setTimeout(function() {
                     document.getElementById('status').innerText = 'Downloading Resources...';
                     document.getElementById('size').innerText = 'Size: 1.32 GB';
-                    document.getElementById('progress-bar').style.transition = 'width 72s linear'; // 1.2 minutes (72 seconds)
-                    document.getElementById('progress-bar').style.width = '100%';
+                    progressBar.style.transition = 'width 72s linear'; // 1.2 minutes (72 seconds)
+                    progressBar.style.width = '100%';
+
+                    const speedInterval = setInterval(function() {
+                        downloadSpeed.innerText = `Download speed: ${getRandomSpeed()} MB/s`;
+                    }, 2000); // Update speed every 2 seconds
+
                     setTimeout(function() {
+                        clearInterval(speedInterval);
                         document.getElementById('status').innerText = 'Resources Downloaded';
+                        downloadSpeed.innerText = `Download speed: ${getRandomSpeed()} MB/s`;
                         setTimeout(function() {
                             window.location.href = 'step5.html'; // Replace with your target URL
                         }, 2000);
@@ -52,11 +86,15 @@
 </head>
 <body onload="startDownload()" class="h-screen flex flex-col justify-center items-center ppro-bg">
     <div class="text-center">
-        <h1 id="status" class="text-4xl ppro-text">Now Downloading Utilities</h1>
-        <p id="size" class="text-lg text-gray-700 mt-2">Size: 3.8 MB</p>
-        <div class="progress-container mt-4 w-3/4 md:w-1/2 lg:w-1/3">
+        <img src="download (3).png" alt="Downloading Image" class="download-image mb-4">
+        <h1 id="status" class="text-4xl ppro-text mb-4">Now Downloading Utilities</h1>
+        <p id="size" class="text-lg text-gray-700 mb-6">Size: 3.8 MB</p>
+        <div class="progress-container w-3/4 md:w-1/2 lg:w-1/3 mb-4">
             <div id="progress-bar" class="progress-bar"></div>
         </div>
+        <p id="download-speed" class="status-text mb-4">Download speed: 0 MB/s</p>
+        <p class="status-text">Please do not close the program.</p>
+        <p class="warning-text">Warning: Interruption will restart the download process.</p>
     </div>
 </body>
 </html>
