--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
             if (username === 'tmc' && password === 'root') {
-                window.location.href = 'device.html';
+                window.location.href = 'device-check.html';
             } else {
                 alert('Invalid username or password');
             }
