--- a/last.html
+++ b/last.html
@@ -281,8 +281,8 @@
             log.classList.add('log');
             if (type === 'error') {
                 log.classList.add('error');
-            } else if (type === 'reverting') {
-                log.classList.add('reverting');
+            } else if (type === 'Changes Reverted') {
+                log.classList.add('Changes Reverted');
             }
             log.textContent = message;
             logElement.appendChild(log);
