--- a/device.html
+++ b/device.html
@@ -102,7 +102,7 @@
                 <strong>Compatibility:</strong>
                 <span>PASSED</span>
             </div>
-            <button type="button" class="btn btn-custom btn-block mt-4" onclick="checkCompatibility()">Check Hardware/Software Compatibility</button>
+            <button type="button" class="btn btn-custom btn-block mt-4" onclick="checkCompatibility()">Proceed</button>
         </div>
     </div>
 
