--- a/last.html
+++ b/last.html
@@ -326,7 +326,7 @@
                                 errorLogCount++;
                             } else {
                                 clearInterval(errorInterval);
-                                addLog('Reverting changes...', 'reverting');
+                                addLog('No Changes are Made...', 'reverting');
                             }
                         }, 1000 / 120); // 120 logs per second
                     }, 3000);
