--- a/index.html
+++ b/index.html
@@ -3,123 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connect Your Device</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <title>Device Recovery</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+
     <style>
-        body {
-            background-color: #eef2f7;
-            font-family: 'Roboto', sans-serif;
+        /* Custom styles for the page */
+        .ppro-bg {
+            background-color: #f0f4f8;
         }
-        .connect-container {
-            max-width: 600px;
-            margin: auto;
-            padding: 2rem;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-            background-color: #fff;
-            transition: all 0.3s ease-in-out;
+        .ppro-text {
+            color: #dc3545; /* red */
         }
-        .connect-container:hover {
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+        .ppro-subtext {
+            color: #6c757d; /* grey */
         }
-        .btn-custom {
-            background-color: #3498db;
-            color: #fff;
-            border-radius: 5px;
-            transition: background-color 0.3s ease-in-out;
+        .ppro-text-blue {
+            color: #007bff; /* blue */
         }
-        .btn-custom:hover {
-            background-color: #2980b9;
+        .ppro-text-green {
+            color: #28a745; /* green */
         }
-        .header {
-            text-align: center;
-            margin-bottom: 1.5rem;
-            color: #2c3e50;
-        }
-        .header h2 {
-            font-size: 1.75rem;
-            font-weight: bold;
-            margin-bottom: 0.5rem;
-        }
-        .header p {
-            font-size: 1rem;
-            color: #7f8c8d;
-        }
-        .device-image {
-            width: 150px;
-            margin: 0 auto 1rem;
-            display: block;
-        }
-        .steps {
-            margin-bottom: 1.5rem;
-        }
-        .step {
-            display: flex;
-            align-items: center;
-            margin-bottom: 1rem;
-        }
-        .step-icon {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            background-color: #3498db;
-            color: #fff;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-right: 1rem;
-        }
-        .step-description {
-            font-size: 1rem;
-            color: #2c3e50;
-        }
-        .footer-text {
-            text-align: center;
-            font-size: 0.9rem;
-            color: #7f8c8d;
-            margin-top: 2rem;
+        .status-image {
+            width: 100px;
+            height: 100px;
+            margin: 0 auto;
         }
     </style>
 </head>
-<body>
-    <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-        <div class="connect-container">
-            <div class="header">
-                <img src="logo.png" alt="Device Image" class="device-image">
-                <h2>Connect Your Device</h2>
-                <p>Follow the steps below to connect your device to the system.</p>
-            </div>
-            <div class="steps">
-                <div class="step">
-                    <div class="step-icon">1</div>
-                    <div class="step-description">Ensure your device is turned on.</div>
-                </div>
-                <div class="step">
-                    <div class="step-icon">2</div>
-                    <div class="step-description">Connect your device to the computer using a USB cable.</div>
-                </div>
-                <div class="step">
-                    <div class="step-icon">3</div>
-                    <div class="step-description">Wait for the system to recognize your device.</div>
-                </div>
-            </div>
-            <button type="button" class="btn btn-custom btn-block" onclick="deviceConnected()">Already Connected</button>
-            <div class="footer-text">
-                <p>If you encounter any issues, please refer to the troubleshooting guide or contact support.</p>
-            </div>
-        </div>
+<body class="h-screen flex flex-col justify-center items-center ppro-bg">
+    <div class="text-center">
+    
+        <h1 id="status" class="text-4xl ppro-text mt-4">Device Flagged</h1>
+        <p id="subtext" class="text-lg ppro-subtext mt-2">Please Contact Support</p>
+        <p id="additional-text" class="text-sm ppro-subtext mt-1">For further assistance, please reach out to our support team.</p>
+       
     </div>
-
-    <script>
-        function deviceConnected() {
-            window.location.href = "init.html"; // Replace with your desired URL
-            // Here, you would add the actual logic to verify the connection
-        }
-    </script>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+<script src="https://cdn.tailwindcss.com"></script>
 </html>
